@@ -14,6 +14,8 @@
        to avoid "ugly" unified diffs. (Stefan)
 - ADD: TortoiseMerge can now resolve a conflicted file
        in Subversion automatically when saving. (Stefan)
+- ADD: In the log dialog you now can select log messages
+       and copy them to the clipboard. (Stefan)
 - CHG: The locatorbar in TME shows the current view range
        with a blue background for better indication. (Stefan)
 - CHG: When showing the log in the merge dialog, it will
